--- a/emilysportfolio/src/index.css
+++ b/emilysportfolio/src/index.css
@@ -31,6 +31,7 @@
   --muted-foreground: oklch(0.556 0 0);
   --accent:oklch(49.833% 0.08505 253.005);
   --accent-foreground: oklch(34.056% 0.07554 253.722);
+  --tags-text: oklch(88.94% 0.024 262.09);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
@@ -135,6 +136,7 @@ html,body {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-tags-text: var(--tags-text);
 }
 
 .dark {
