--- a/emilysportfolio/src/index.css
+++ b/emilysportfolio/src/index.css
@@ -4,12 +4,11 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  font-family: 'Lexend', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Lexend', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #C37EA8;
   background: var(--background);
 
   font-synthesis: none;
@@ -31,7 +30,7 @@
   --muted-foreground: oklch(0.556 0 0);
   --accent:oklch(49.833% 0.08505 253.005);
   --accent-foreground: oklch(34.056% 0.07554 253.722);
-  --tags-text: oklch(88.94% 0.024 262.09);
+  --tags-text: oklch(88.94% 0.02415 262.135);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
@@ -108,6 +107,7 @@ button:focus-visible {
 }
 
 html,body {
+  
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
